[gd_scene load_steps=4 format=3 uid="uid://d1q55gksox067"]

[ext_resource type="Script" path="res://src/ui/screens/battle/BattleResolutionUI.gd" id="1"]
[ext_resource type="Theme" path="res://src/ui/themes/default_theme.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.2, 0.25, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)

[node name="BattleResolutionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="BattleTitle" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Battle Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleInfo" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MissionType" type="Label" parent="MainContainer/BattleInfo"]
layout_mode = 2
text = "Mission: Patrol"

[node name="Difficulty" type="Label" parent="MainContainer/BattleInfo"]
layout_mode = 2
text = "Difficulty: 2"

[node name="BattleContent" type="HSplitContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer/BattleContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CrewPanel" type="GroupContainer" parent="MainContainer/BattleContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
title = "Your Crew"

[node name="CrewList" type="VBoxContainer" parent="MainContainer/BattleContent/LeftPanel/CrewPanel"]
layout_mode = 2

[node name="BattleLogPanel" type="GroupContainer" parent="MainContainer/BattleContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
title = "Battle Log"

[node name="BattleLog" type="RichTextLabel" parent="MainContainer/BattleContent/LeftPanel/BattleLogPanel"]
layout_mode = 2
bbcode_enabled = true
text = "[color=gray]Battle log will appear here...[/color]"
scroll_following = true

[node name="RightPanel" type="VBoxContainer" parent="MainContainer/BattleContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyPanel" type="GroupContainer" parent="MainContainer/BattleContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
title = "Enemies"

[node name="EnemyList" type="VBoxContainer" parent="MainContainer/BattleContent/RightPanel/EnemyPanel"]
layout_mode = 2

[node name="BattleActionsPanel" type="GroupContainer" parent="MainContainer/BattleContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
title = "Battle Actions"

[node name="ActionButtons" type="VBoxContainer" parent="MainContainer/BattleContent/RightPanel/BattleActionsPanel"]
layout_mode = 2

[node name="ResolveBattle" type="Button" parent="MainContainer/BattleContent/RightPanel/BattleActionsPanel/ActionButtons"]
layout_mode = 2
text = "Resolve Battle Automatically"

[node name="PlayTactically" type="Button" parent="MainContainer/BattleContent/RightPanel/BattleActionsPanel/ActionButtons"]
layout_mode = 2
text = "Play Tactical Battle"

[node name="FleeButton" type="Button" parent="MainContainer/BattleContent/RightPanel/BattleActionsPanel/ActionButtons"]
layout_mode = 2
text = "Attempt to Flee"

[node name="BattleControls" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="MainContainer/BattleControls"]
layout_mode = 2
text = "Back to Pre-Battle"

[node name="BattleStatus" type="Label" parent="MainContainer/BattleControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ready for Battle"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="MainContainer/BattleControls"]
layout_mode = 2
text = "Continue to Post-Battle"
disabled = true 